--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Parts Runner</string>
-    <string name="action_settings">Settings</string>
+    <string name="equipment_types">Edit Equipment Types</string>
 
     <!-- Title text for the empty view [CHAR LIMIT=50] -->
     <string name="empty_view_title_text">OH NO Mr. Bill I\'m a lazy Lima Bean who has not entered anything in the Machines\' sheets.</string>
