Subject: Equipment Types Edit
What Happened: Implemented Loader for EquipmentTypeActivity.java. Implemented EquipTypeCursorAdapterjava. Implemented database functions for Equipment Types table in PartsRunnerProvider. Create layout files for EquipmentTypeActivity and EquipTypeCursorAdapter and EditEquipTypeActivity.java. Create class for EditEquipTypeActivity- not yet implmented. Also need to add to Manifest.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,10 @@
     <string name="which_one">Which number if more than one</string>
     <string name="notes">Put notes here</string>
 
+    <!-- activity_equipment_type.xml -->
+    <string name="empty_view_equipment_type_text">If there are no Equipment Types listed
+    please add some by clicking on the Floating Action Button (Plus Sign) below.</string>
+
+
 
 </resources>
