--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="empty_view_subtitle_text">Please get started adding some vehicles/machines/items by clicking on the button below.</string>
 
     <string name="activity_add_edit_item_title_add_machine">Add Item</string>
-    <string name="activity_add_edit_item_title_edit_machine">Add Item</string>
+    <string name="activity_add_edit_item_title_edit_machine">Edit Item</string>
 
     <!-- activity_add_edit_item.xml -->
     <string name="machine_type">Item Type:"</string>
@@ -21,7 +21,7 @@
 
     <string name="share">Share</string>
     <string name="action_save">Save</string>
-    <string name="action_delete">Delete this entry</string>
+    <string name="action_delete">Delete this item</string>
     <string name="insert_machine_failed">Failed to save machine/item</string>
     <string name="insert_machine_good">machine/item successfully served</string>
     <string name="edit_update_machine_failed">failed to update machine/item</string>
