Subject: Clean up verson numner
What Happened: Added version number to App name. Added .gitignore file to keep from generating app/build/imtermediates/* files on every run.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Parts Runner</string>
+    <string name="app_name">Parts Runner 0.8.2</string>
     <string name="equipment_types">Edit Equipment Types</string>
 
     <!-- Title text for the empty view [CHAR LIMIT=50] -->
