--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Parts Runner 0.8.2</string>
+    <string name="app_name">Parts Runner 0.9.0</string>
     <string name="equipment_types">Edit Equipment Types</string>
 
     <!-- Title text for the empty view [CHAR LIMIT=50] -->
@@ -19,7 +19,6 @@
     <string name="serial_num">Serial No:</string>
     <string name="item_num">Item No:</string>
 
-    <string name="share">Share</string>
     <string name="action_save">Save</string>
     <string name="action_delete">Delete this item</string>
     <string name="insert_machine_failed">Failed to save machine/item</string>
@@ -50,7 +49,8 @@
     <string name="edit_update_record_success">Record update succeeded</string>
     <string name="delete_record_failure">Record not deleted (Error)</string>
     <string name="delete_record_successful">Record deleted</string>
-
+    <string name="share_text">Share as text message</string>
+    <string name="share_email">Share as e-mail</string>
 
 
 </resources>
