Subject: Change Spinner Theme to HoloLight
What Happened: Changed Spinner Theme to AlertDialog.THEME_HOLO_LIGHT

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Parts Runner 1.0.1</string>
+    <string name="app_name">Parts Runner</string>
     <string name="equipment_types">Edit Equipment/Item Types</string>
 
     <!-- Title text for the empty view [CHAR LIMIT=50] -->
